tests/NormalTests/paczka1/small_fuzzy/71924851.err
Error in line 2: A70 A70 26,7
Error in line 3: A70 S6 28,7
Error in line 8: 7WD7RQeD6Y S816 68,8
